@@ -398,3 +398,4 @@ Revision	Version Updated		Log Message
 459		C++			Refactor minor V2 classes
 460		C++			Refactor V2Pop
 461		C++			Refactor V2Province
+462		C++			Refactor V2State
